# se-cldnn-torch

./: .gitignore  ReadMe.md  debug.sh  eval.sh  local_cldnn.sh  run_big_data.sh  run_cldnn.sh  run_sruc.sh  test.sh
data/: cv.lst  dev  dev_2018.lst  test  tr.lst  train  train_2018.lst  tt.lst
infer/: convert_onnx.py  convert_tf.py  test_speech.py
infer/cpp_infer/: CMakeLists.txt  test.cpp
infer/cpp_infer/lib/: CMakeLists.txt  sru_cpu_infer.cpp
model/: bk_infer_cldnn.py  cldnn.py  cldnn_test.py  infer_cldnn.py  infer_sruc.py  modules.py  sruc.py
runs/Apr14_23-24-19_node9/: events.out.tfevents.1555255459.node9
runs/Apr15_09-53-51_node12/: events.out.tfevents.1555293231.node12
runs/Apr15_09-58-25_node8/: events.out.tfevents.1555293505.node8
runs/Apr15_10-00-22_node8/: events.out.tfevents.1555293622.node8
runs/Apr15_10-03-33_node8/: events.out.tfevents.1555293813.node8
runs/Apr15_10-04-40_node8/: events.out.tfevents.1555293880.node8
steps/: run_auto_dataset.py  run_big_data.py  run_cldnn.py  run_sruc.py
test/: MROA0_MROA0_SX137.wav.mat  clean_wav.lst  generate.py  roboo_wav_16k_013307.wav.mat  roboo_wav_16k_026500.wav.mat  roboo_wav_16k_031492.wav.mat  speaker011_10121002.wav.mat  test.lst  wav.lst  wav3_200_000176.wav.mat  wav5_200_16k_107162.wav.mat
tools/: add_noise.py  auto_dataset.py  bk_dataset.py  clean_wav.lst  convert_model.py  dataset.py  dataset_test.py  eval_objective.py  f.sh  generate.py  misc.py  prepare_test.sh  prepare_train.sh  run_pesq.py  test.lst  test_clean.lst  wav.lst
tools/speech_processing_toolbox/voicetool/: base.py  (+1 more)
(+10 files in other folders)
