cmake_minimum_required(VERSION 3.0 FATAL_ERROR)

project(custom_ops)
set(CMAKE_PREFIX_PATH /home/work_nfs2/yxhu/libs/libtorch)
set(libsru /home/work_nfs3/yxhu/anaconda2/envs/py36/lib/python3.6/site-packages/sru/build/libsru_cpu_infer.so)
find_package(Torch REQUIRED)
add_executable(example-app test.cpp)
target_link_libraries(example-app "${TORCH_LIBRARIES}")
target_link_libraries(example-app -Wl,--no-as-needed ${libsru})
set_property(TARGET example-app PROPERTY CXX_STANDARD 11)
